src/test/ui/error-codes/E0029-teach.stderr
error[E0658]: non-reference pattern used to match a reference (see issue #42640)
  --> $DIR/E0029-teach.rs:17:9
   |
17 |         "hello" ... "world" => {}
   |         ^^^^^^^^^^^^^^^^^^^ help: consider using a reference: `&"hello" ... "world"`
   |
   = help: add #![feature(match_default_bindings)] to the crate attributes to enable

error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/E0029-teach.rs:17:9
   |
17 |         "hello" ... "world" => {}
   |         ^^^^^^^^^^^^^^^^^^^ ranges require char or numeric types
   |
   = note: start type: &'static str
   = note: end type: &'static str
   = note: In a match expression, only numbers and characters can be matched against a range. This is because the compiler checks that the range is non-empty at compile-time, and is unable to evaluate arbitrary comparison functions. If you want to capture values of an orderable type between two end-points, you can use a guard.

error: aborting due to 2 previous errors

You've got a few errors: E0029, E0658
If you want more information on an error, try using "rustc --explain E0029"
